{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 11,
  "lineage": "412f054f-0eb4-1506-51c4-21ec06917efc",
  "resources": [
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "module.instance.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-04T02:48:04.108-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terra-practice/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/networks/default",
            "priority": 1000,
            "project": "terra-practice",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/firewalls/allow-http",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "module.instance.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-04T02:48:04.295-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terra-practice/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/networks/default",
            "priority": 1000,
            "project": "terra-practice",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/firewalls/allow-https",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "module.instance.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221206",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terra-practice/zones/us-central1-a/disks/app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terra-practice/zones/us-central1-a/instances/app",
            "instance_id": "1655382069516756873",
            "label_fingerprint": "PlqFQLBsw9g=",
            "labels": {
              "machine_type": "n1-standard-1",
              "name": "app"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "MuAwUCgnRF8=",
            "metadata_startup_script": "echo hi \u003e /test.txt",
            "name": "app",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/networks/default",
                "network_ip": "10.128.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terra-practice/regions/us-central1/subnetworks/default",
                "subnetwork_project": "terra-practice"
              }
            ],
            "project": "terra-practice",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-practice/zones/us-central1-a/instances/app",
            "service_account": [
              {
                "email": "465032115582-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terra-practice/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "project": "terra-practice",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/networks/terraform-network"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public-subnetwork",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-04T02:48:38.699-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/terra-practice/regions/us-central1/subnetworks/terraform-subnetwork",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "terraform-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/networks/terraform-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terra-practice",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-practice/regions/us-central1/subnetworks/terraform-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}